# Aleksandra

./: CMakeLists.txt  README.md
examples/: helloWorld.dra
examples/hello_world/: main.dra
examples/syntax/: syntax.dra
src/: fileLoader.cpp  fileLoader.hpp  lexer.cpp  lexer.hpp  main.cpp  preprocessor.hpp
